@@ -49,14 +49,14 @@
         <maven.compiler.showCompilationChanges>true</maven.compiler.showCompilationChanges>
         <maven.compiler.createMissingPackageInfoClass>false</maven.compiler.createMissingPackageInfoClass>
 
-        <org.junit.version>5.10.2</org.junit.version>
+        <org.junit.version>5.10.3</org.junit.version>
         <!-- Stay on 4.x for Java 8 compatibility. Newer versions are used for Java 11+ builds -->
         <mockito.version>4.11.0</mockito.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <lombok.version>1.18.32</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
         <jna.version>5.14.0</jna.version>
-        <bouncycastle.version>1.78</bouncycastle.version>
-        <vertx.version>4.5.7</vertx.version>
+        <bouncycastle.version>1.78.1</bouncycastle.version>
+        <vertx.version>4.5.9</vertx.version>
         <!-- Stay on 1.7 for Java 8 compatibility. Newer versions are used for Java 11+ builds -->
         <google-java-format.version>1.7</google-java-format.version>
         <spotless.version>2.30.0</spotless.version>
@@ -90,6 +90,7 @@
                         <arg>--pinentry-mode</arg>
                         <arg>loopback</arg>
                     </gpgArguments>
+                    <useAgent>false</useAgent>
                 </configuration>
             </plugin>
 
@@ -206,7 +207,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.6.3</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>${target.jdk}</source>
                     <sourcepath>${delombok.output}</sourcepath>
@@ -221,7 +222,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.3.1</version>
                 <configuration>
                     <rerunFailingTestsCount>3</rerunFailingTestsCount>
                     <includes>
@@ -276,7 +277,7 @@
             <plugin>
                 <groupId>com.github.siom79.japicmp</groupId>
                 <artifactId>japicmp-maven-plugin</artifactId>
-                <version>0.20.0</version>
+                <version>0.21.2</version>
                 <configuration>
                     <newVersion>
                         <file>
@@ -298,12 +299,7 @@
                             <exclude>org.xbill.DNS.spi.DnsjavaInetAddressResolver</exclude>
                             <exclude>org.xbill.DNS.spi.DNSJavaNameService</exclude>
                             <exclude>org.xbill.DNS.spi.DNSJavaNameServiceDescriptor</exclude>
-                            <!-- package-private class converted to public interface, the tool is confused -->
-                            <!-- TODO: remove when 3.6.0 is released -->
-                            <exclude>org.xbill.DNS.dnssec.TrustAnchorStore</exclude>
                         </excludes>
-                        <!-- TODO: remove when 3.6.0 is released -->
-                        <ignoreMissingClasses>true</ignoreMissingClasses>
                         <overrideCompatibilityChangeParameters>
                             <overrideCompatibilityChangeParameter>
                                 <compatibilityChange>ANNOTATION_DEPRECATED_ADDED</compatibilityChange>
@@ -371,7 +367,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <id>check</id>
@@ -405,13 +401,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>3.4.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -434,7 +430,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.13</version>
+                <version>1.7.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -446,7 +442,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.23</version>
+                <version>1.24</version>
                 <configuration>
                     <signature>
                         <groupId>net.sf.androidscents.signature</groupId>
@@ -487,13 +483,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.0</version>
             </plugin>
         </plugins>
     </build>
@@ -555,7 +551,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.25.3</version>
+            <version>3.26.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -573,7 +569,7 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.14.14</version>
+            <version>1.14.18</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -604,7 +600,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.16.0</version>
+            <version>2.16.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -642,7 +638,7 @@
             </activation>
 
             <properties>
-                <mockito.version>5.7.0</mockito.version>
+                <mockito.version>5.12.0</mockito.version>
                 <google-java-format.version>1.17.0</google-java-format.version>
                 <spotless.version>2.43.0</spotless.version>
             </properties>
@@ -720,7 +716,6 @@
                             <argLine>
                                 @{argLine}
                                 --add-opens java.base/sun.net.dns=ALL-UNNAMED
-                                --add-opens java.base/sun.net.dns=org.dnsjava
                             </argLine>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>${project.build.outputDirectory}/META-INF/versions/11</additionalClasspathElement>
@@ -831,7 +826,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.6.1</version>
+                        <version>3.7.1</version>
                         <executions>
                             <execution>
                                 <phase>initialize</phase>
@@ -849,7 +844,6 @@
                             <argLine>
                                 @{argLine}
                                 --add-opens java.base/sun.net.dns=ALL-UNNAMED
-                                --add-opens java.base/sun.net.dns=org.dnsjava
                                 -javaagent:${net.bytebuddy:byte-buddy-agent:jar}
                             </argLine>
                             <additionalClasspathElements>
